resolve deprecation warnings