@@ -8,6 +8,8 @@ package com.blazartech.products.lafman.config;
 import com.blazartech.products.lafman.UILookAndFeelManagerImpl;
 import java.beans.PropertyChangeEvent;
 import java.beans.PropertyChangeListener;
+import java.lang.reflect.InvocationTargetException;
+import java.util.logging.Level;
 import javax.swing.LookAndFeel;
 import javax.swing.UIManager;
 import org.slf4j.Logger;
@@ -34,11 +36,11 @@ class UILookAndFeelInstaller implements PropertyChangeListener {
             lafImpl.getLafClassNames().stream().forEach((lafClass) -> {
                 try {
                     logger.info("instantiating " + lafClass);
-                    LookAndFeel laf = (LookAndFeel) Class.forName(lafClass).newInstance();
+                    LookAndFeel laf = (LookAndFeel) Class.forName(lafClass).getDeclaredConstructor().newInstance();
                     UIManager.installLookAndFeel(laf.getName(), lafClass);
-                } catch(ClassNotFoundException|IllegalAccessException|InstantiationException e) {
+                } catch(ClassNotFoundException|IllegalAccessException|InstantiationException|NoSuchMethodException|IllegalArgumentException|InvocationTargetException e) {
                     logger.error("error loading LAF class: " + e.getMessage(), e);
-                }
+                } 
             });
             
             UIManager.LookAndFeelInfo[] installed = UIManager.getInstalledLookAndFeels();
